--- a/linalg.sty
+++ b/linalg.sty
@@ -4,65 +4,75 @@
 
 \RequirePackage[d]{esvect}
 
-\newcommand{\dotp}[2]{\vv{#1}\cdot\vv{#2}}
-\newcommand{\txproj}{\text{proj}}
-\newcommand{\txperp}{\text{perp}}
-\newcommand{\projonto}[2]{\text{proj}_{\vv{#1}}(\vv{#2})}
-\newcommand{\perponto}[2]{\text{perp}_{\vv{#1}}(\vv{#2})}
+% Operators
+\newcommand{\setspan}{\operatorname{Span}}
+\newcommand{\nullity}{\operatorname{nullity}}
+\newcommand{\rref}{\operatorname{RREF}}
+\newcommand{\colspace}{\operatorname{Col}}
+\newcommand{\rowspace}{\operatorname{Row}}
+\newcommand{\nullspace}{\operatorname{Null}}
+\newcommand{\diag}{\operatorname{diag}}
+\newcommand{\range}{\operatorname{Range}}
+\newcommand{\kernel}{\operatorname{Ker}}
+\newcommand{\id}{\operatorname{id}_n}
+\newcommand{\adj}{\operatorname{adj}}
+\newcommand{\vecproj}{\operatorname{proj}}
+\newcommand{\vecperp}{\operatorname{perp}}
+\newcommand{\projonto}[2]{\operatorname{proj}_{\vv{#1}}(\vv{#2})}
+\newcommand{\perponto}[2]{\operatorname{perp}_{\vv{#1}}(\vv{#2})}
 
-\newcommand{\letmatrix}{A\in M_{m\times n}(\mathbb{F})}
-\newcommand{\letsquare}{A\in M_{n\times n}(\mathbb{F})}
-\newcommand{\letmat}[1]{#1 \in M_{m \times n}(\mbb{F}{})}
-\newcommand{\letsqmat}[1]{#1 \in M_{n \times n}(\mbb{F}{})}
-\newcommand{\lettransform}{T: \mbb{F}{n} \to \mbb{F}{m}}
-\newcommand{\transform}[3]{#1: \mbb{F}{#2} \to \mbb{F}{#3}}
-\newcommand{\letlinop}{T: \mbb{F}{n} \to \mbb{F}{n}}
-\newcommand{\stdmat}[1]{
+% Commands for vectors
+% Quick column vectors
+\ExplSyntaxOn
+\clist_new:N \l_lvec_clist
+\NewDocumentCommand{\lvec}{O{\\}mO{b}}{
+  \clist_set:Nn \l_lvec_clist {#2}
+  \begin{#3matrix}
+  \clist_use:Nn \l_lvec_clist {#1}
+  \end{#3matrix}
+}
+\ExplSyntaxOff
+\NewDocumentCommand{\vectors}{O{v}O{1}O{k}}
+{\vv{#1_{#2}}, \dots, \vv{#1_{#3}}}
+\NewDocumentCommand{\scalars}{O{c}O{1}O{k}}
+{#1_{#2}, \dots, #1_{#3}}
+\NewDocumentCommand{\lincom}{O{v}O{c}O{1}O{k}}
+{
+    {#2}_{#3}{\vv{{#1}_{#3}}} + \dots + {#2}_{#4}{\vv{{#1}_{#4}}}
+}
+\newcommand{\tvec}[1]{\lvec[&]{#1}^T}
+\newcommand{\dotp}[2]{\vv{#1}\cdot\vv{#2}}
+\newcommand{\coord}[2]{
 \begin{bmatrix}
+    \vv{#1}
+\end{bmatrix}_{\mathcal{#2}}}
+\newcommand{\basisvec}[1]{\vv{e_{#1}}}
+
+% Commands for matrices
+\NewDocumentCommand{\letmat}{O{A}O{m}O{n}O{F}}
+{#1 \in M_{#2 \times #3}(\mathbb{#4})}
+\NewDocumentCommand{\matspace}{O{m}O{n}O{F}}
+{M_{#1 \times #2}(\mathbb{#3})}
+\NewDocumentCommand{\transform}{O{T}O{n}O{m}O{F}}
+{#1: \mathbb{#4}^{#2} \to \mathbb{#4}^{#3}}
+\newcommand{\coordmat}[2]{\begin{bmatrix}
     #1
-\end{bmatrix}_{\mathcal{E}}}
-\newcommand{\coordmat}[2]{
-\begin{bmatrix}
-    #1
-\end{bmatrix}_{#2}}
-\newcommand{\basis}[1]{\vv{e_{#1}}}
-\newcommand{\kvectors}{\vv{v_1}, \dots, \vv{v_k}}
-\newcommand{\kvecsub}[1]{\vv{v_{#1 1}}, \dots, \vv{v_{#1 k}}}
+\end{bmatrix}_{\mathcal{#2}}}
+\newcommand{\cob}[2]{
+\vphantom{}{\strut_{\mathcal{#1}}}
+{\begin{bmatrix}
+    I
+\end{bmatrix}}
+{\strut_{\mathcal{#2}}}
+}
+\newcommand{\augmat}[2]{\left[#1 \mid #2\right]}
+\newcommand{\charpol}[1]{C_{#1}(\lambda)}
 \newcommand{\vecmat}[2]{
 \begin{bmatrix}
     \vv{#1} \,\, \dots \,\, \vv{#2}
 \end{bmatrix}}
-\newcommand{\vectors}[2]{\vv{#1}, \dots, \vv{#2}}
-\newcommand{\vectorsubs}[4]{\vv{#1}_{#2}, \dots, \vv{#3}_{#4}}
-\newcommand{\tvec}[1]{
-    \begin{bmatrix}
-        #1
-    \end{bmatrix}^T
-}
-\newcommand{\cob}[2]{{}_{#1}
-\begin{bmatrix}
-    I
-\end{bmatrix}_{#2}}
-\newcommand{\coord}[2]{
-\begin{bmatrix}
-    \vv{#1}
-\end{bmatrix}_{#2}}
-\newcommand{\augmat}[2]{[#1 \mid #2]}
-\newcommand{\charpol}[1]{C_{#1}(\lambda)}
 
-\newcommand{\setspan}[1]{\operatorname{Span}\left\{#1\right\}}
-\newcommand{\spans}{\operatorname{Span}}
-\newcommand{\nullity}[1]{\operatorname{nullity}\left(#1\right)}
-\newcommand{\rref}{\operatorname{RREF}}
-\newcommand{\colspace}[1]{\operatorname{Col}\left(#1\right)}
-\newcommand{\rowspace}[1]{\operatorname{Row}\left(#1\right)}
-\newcommand{\nullspace}[1]{\operatorname{Null}\left(#1\right)}
-\newcommand{\diag}{\operatorname{diag}}
-\newcommand{\range}[1]{\operatorname{Range}\left(#1\right)}
-\newcommand{\kernel}[1]{\operatorname{Ker}\left(#1\right)}
-\newcommand{\id}{\operatorname{id}_n}
-\newcommand{\adj}[1]{\operatorname{adj}\left(#1\right)}
-
+% Setup for row reduction
 \newlength{\rrwidth}
 \setlength{\rrwidth}{6em}
 \newcommand{\rrarrow}[1]{\xrightarrow{\mathmakebox[\rrwidth]{#1}}}
@@ -78,6 +88,7 @@
 \newcolumntype{M}{>{\centering\arraybackslash$}m{\midwidth}<{$}}
 \newcolumntype{I}{>{\centering\arraybackslash$}m{\comwidth}<{$}}
 
+% Matrix environments
 \newenvironment{commatrix}{\left[\begin{array}{@{}CMC|I@{}}}{\end{array}\right]}
 \newcommand{\commat}[1]{\begin{commatrix} #1 \end{commatrix}}
 
@@ -92,16 +103,5 @@
 
 \newenvironment{invmatrix}[1]{\left[\begin{array}{@{}*{\numexpr#1}{C}|@{}*{\numexpr#1}{C}@{}}}{\end{array}\right]}
 \newcommand{\setinv}[2]{\begin{invmatrix}{#1} #2 \end{invmatrix}}
-
-% \lvec
-\ExplSyntaxOn
-\clist_new:N \l_lvec_clist
-\NewDocumentCommand{\lvec}{O{\\}mO{b}}{
-  \clist_set:Nn \l_lvec_clist {#2} % Set the list
-  \begin{#3matrix}
-  \clist_use:Nn \l_lvec_clist {#1} % show it with separator from #1 (\\)
-  \end{#3matrix}
-}
-\ExplSyntaxOff
 
 \endinput
