--- a/preambles/base.sty
+++ b/preambles/base.sty
@@ -7,7 +7,7 @@
  prefix=base@
 }
 
-\DeclareStringOption[Eric Wang (e224wang)]{name}[]
+\DeclareStringOption{name}[]
 \DeclareStringOption{course}[]
 \DeclareStringOption{code}[]
 \DeclareStringOption{doctype}[]
