--- a/preambles/boxes.sty
+++ b/preambles/boxes.sty
@@ -1,3 +1,5 @@
+% Primarily based off https://github.com/thaqib0437/uwnotes/blob/main/template/template.sty
+
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{boxes}
 \RequirePackage{kvoptions}
