--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -60,6 +60,7 @@
 \newcommand{\coordmat}[2]{\begin{bmatrix}
     #1
 \end{bmatrix}_{\mathcal{#2}}}
+\newcommand{\stdmat}[1]{\coordmat{#1}{E}}
 % change of basis
 \newcommand{\cob}[2]{
 \vphantom{}{\strut_{\mathcal{#1}}}
