--- a/preambles/base.sty
+++ b/preambles/base.sty
@@ -7,7 +7,7 @@
  prefix=base@
 }
 
-\DeclareStringOption{name}[]
+\DeclareStringOption[Eric Wang (e224wang)]{name}[]
 \DeclareStringOption{course}[]
 \DeclareStringOption{code}[]
 \DeclareStringOption{doctype}[]
@@ -28,10 +28,17 @@
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[makeroom]{cancel}
 \RequirePackage{graphicx}
+\RequirePackage[dvipsnames]{xcolor}
 \RequirePackage{physics}
+\RequirePackage{bm} % bold math
+\RequirePackage{enumerate}
+\RequirePackage[T1]{fontenc}
 
 
+\NewDocumentCommand{\expf}{O{x}}{\exp\left(#1\right)}
 \NewDocumentCommand{\mbb}{O{F}O{n}}{\mathbb{#1}^{#2}}
+\NewDocumentCommand{\f}{O{1}O{2}}{\frac{#1}{#2}}
+\NewDocumentCommand{\df}{O{1}O{2}}{\dfrac{#1}{#2}}
 \newcommand{\quads}{\hspace{0.4em}}
 \newcommand{\matped}{.\hspace{0.4em}\hspace{1.5pt}}
 \newcommand{\fracnewline}{\\[6pt]}
@@ -39,6 +46,10 @@
 \newcommand{\nd}{\textsuperscript{nd}}
 \newcommand{\rd}{\textsuperscript{rd}}
 \newcommand{\tth}{\textsuperscript{th}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\F}{\mathbb{F}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\N}{\mathbb{N}}
 \newcommand{\elemr}{\in \mathbb{R}}
 \newcommand{\elemn}{\in \mathbb{N}}
 \newcommand{\elemz}{\in \mathbb{Z}}
@@ -54,9 +65,11 @@
 \newcommand{\mP}{\mathcal{P}}
 \newcommand{\mC}{\mathcal{C}}
 \newcommand{\mO}{\mathcal{O}}
-\newcommand{\f}[2]{\frac{#1}{#2}}
 \newcommand{\recip}[1]{\frac{1}{#1}}
 \newcommand{\newq}[1]{\textbf{Question #1.} \bigbreak}
+\newcommand{\newsq}[1]{\medbreak (#1)}
+\newcommand{\newpq}[1]{\newpage \textbf{Question #1.} \bigbreak}
+\newcommand{\newlq}[1]{\bigbreak \textbf{Question #1.} \bigbreak}
 \newcommand{\newqq}[1]{\textbf{Question #1.}}
 \newcommand{\fwdd}{(\Rightarrow)}
 \newcommand{\revd}{(\Leftarrow)}
@@ -67,7 +80,9 @@
 \newcommand{\leteq}{\mathrel{\vcenter{\baselineskip0.5ex \lineskiplimit0pt
                      \hbox{\scriptsize.}\hbox{\scriptsize.}}}%
                      =}
-
+\newcommand{\varnot}[1]{\overline{#1}}
+\newcommand{\qandq}{\quad\text{and}\quad}
+\newcommand{\othw}{\quad\text{otherwise}}
 
 % Theorems/proofs
 \newtheoremstyle{boldrem}%      % Name
@@ -77,7 +92,7 @@
   {}%                           % Indent amount
   {\itshape\bfseries}%          % Theorem head font
   {.}%                          % Punctuation after theorem head
-  {1em}%                        % Space after theorem head, ' ', or \newline
+  {0.5em}%                        % Space after theorem head, ' ', or \newline
   {}%                           % Theorem head spec (can be left empty, meaning `normal')
 \swapnumbers
 \theoremstyle{plain}
