--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -4,7 +4,7 @@
 \RequirePackage[d]{esvect}
 
 % Operators
-\newcommand{\setspan}{\operatorname{Span}}
+\newcommand{\spn}{\operatorname{Span}}
 \newcommand{\nllty}{\operatorname{nullity}}
 \newcommand{\rref}{\operatorname{RREF}}
 \newcommand{\colsp}{\operatorname{Col}}
@@ -83,9 +83,9 @@
 \newcommand{\rrend}{\phantom{\to}}
 
 \newcommand{\rrline}{%
-    \begin{aligned}%
-        \rightarrow%
-    \end{aligned} \\\\%
+\begin{aligned}%
+    \rightarrow%
+\end{aligned} \\\\%
 }
 
 \newlength{\mwidth}
