--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -32,23 +32,23 @@
 }
 \ExplSyntaxOff
 % list of vectors
-\NewDocumentCommand{\vectors}{O{v}O{1}O{k}}
+\NewDocumentCommand{\vectors}{O{v} O{1} O{k}}
 {\vv{#1_{#2}}, \dots, \vv{#1_{#3}}}
 % list of scalars
-\NewDocumentCommand{\scalars}{O{c}O{1}O{k}}
+\NewDocumentCommand{\scalars}{O{c} O{1} O{k}}
 {#1_{#2}, \dots, #1_{#3}}
 % linear combination
-\NewDocumentCommand{\lincom}{O{v}O{c}O{1}O{k}}
+\NewDocumentCommand{\lincom}{O{v} O{c} O{1} O{k}}
 {
     {#2}_{#3}{\vv{{#1}_{#3}}} + \dots + {#2}_{#4}{\vv{{#1}_{#4}}}
 }
 \newcommand{\tvec}[1]{\lvec[&]{#1}^T}
 \newcommand{\dotp}[2]{\vv{#1}\cdot\vv{#2}}
-\newcommand{\coord}[2]{
-\begin{bmatrix}
-    \vv{#1}
-\end{bmatrix}_{\mathcal{#2}}}
-\newcommand{\basisvec}[1]{\vv{e_{#1}}}
+\NewDocumentCommand{\coord}{m O{\vv{v}}}
+{\begin{bmatrix}%
+    #2%
+\end{bmatrix}%
+_{\mathcal{#1}}}
 
 % Commands for matrices
 \NewDocumentCommand{\letmat}{O{A}O{m}O{n}O{F}}
@@ -62,14 +62,13 @@
 \end{bmatrix}_{\mathcal{#2}}}
 \newcommand{\stdmat}[1]{\coordmat{#1}{E}}
 % change of basis
-\newcommand{\cob}[2]{
-\vphantom{}{\strut_{\mathcal{#1}}}
-{\begin{bmatrix}
-    I
-\end{bmatrix}}
-{\strut_{\mathcal{#2}}}
+\NewDocumentCommand{\cob}{m m O{\left[I\right]}}{
+\vphantom{}%
+{\strut_{\mathcal{#1}}}%
+{#3}%
+{\strut_{\mathcal{#2}}}%
 }
-\newcommand{\augmat}[2]{\left[#1 \mid #2\right]}
+\NewDocumentCommand{\aug}{O{A} O{b}}{\left[#1 \mid \vv{#2}\right]}
 \newcommand{\charpol}[1]{C_{#1}(\lambda)}
 \newcommand{\vecmat}[2]{
 \begin{bmatrix}
@@ -103,14 +102,15 @@
 \newenvironment{commatrix}{\left[\begin{array}{@{}CMC|I@{}}}{\end{array}\right]}
 \newcommand{\commat}[1]{\begin{commatrix} #1 \end{commatrix}}
 
-\newenvironment{amatrix}[1]{\left[\begin{array}{@{}*{\numexpr#1-1}{c}|c@{}}}{\end{array}\right]}
-\newcommand{\am}[2]{\begin{amatrix}{#1} #2 \end{amatrix}}
+\newenvironment{amatrix}[2]{\left[\begin{array}{*{\numexpr#1}{c}|*{\numexpr#2}c}}{\end{array}\right]}
+\NewDocumentCommand{\augmat}{m O{1} m}
+{\begin{amatrix}{#1}{#2} #3 \end{amatrix}}
 
-\newenvironment{setamatrix}[1]{\left[\begin{array}{@{}*{\numexpr#1-1}{C}|C@{}}}{\end{array}\right]}
-\newcommand{\setam}[2]{\begin{setamatrix}{#1} #2 \end{setamatrix}}
+\newenvironment{setamatrix}[2]{\left[\begin{array}{@{}*{\numexpr#1}{C}|*{\numexpr#2}{C}@{}}}{\end{array}\right]}
+\NewDocumentCommand{\setam}{m O{1} m}
+{\begin{setamatrix}{#1}{#2} #3 \end{setamatrix}}
 
 \newenvironment{setbmatrix}[1]{\left[\begin{array}{@{}*{\numexpr#1}{C}@{}}}{\end{array}\right]}
-
 \NewDocumentCommand{\setbm}{O{3} m}{\begin{setbmatrix}{#1} #2 \end{setbmatrix}}
 
 \newenvironment{invmatrix}[1]{\left[\begin{array}{@{}*{\numexpr#1}{C}|@{}*{\numexpr#1}{C}@{}}}{\end{array}\right]}
