--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -119,5 +119,6 @@ _{\mathcal{#1}}}
 
 % CO macros
 \newcommand{\lpst}{\text{s.t.}\quads}
+\newcommand{\coz}{\text{\usefont{U}{bbold}{m}{n}0}}
 
 \endinput
