some changes and betterments

--- a/preambles/base.sty
+++ b/preambles/base.sty
@@ -33,6 +33,7 @@
 \RequirePackage{bm} % bold math
 \RequirePackage{enumerate}
 \RequirePackage[T1]{fontenc}
+\RequirePackage{tikz}
 
 % For InkScape nonsense
 \RequirePackage{import}
@@ -96,6 +97,7 @@
 \newcommand{\varnot}[1]{\overline{#1}}
 \newcommand{\qandq}{\quad\text{and}\quad}
 \newcommand{\othw}{\quad\text{otherwise}}
+\newcommand{\del}{\partial}
 
 % Theorems/proofs
 \newtheoremstyle{boldrem}%      % Name
