--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -119,6 +119,9 @@ _{\mathcal{#1}}}
 
 % CO macros
 \newcommand{\lpst}{\text{s.t.}\quads}
+\newcommand{\minq}{\min\quads}
+\newcommand{\maxq}{\max\quads}
 \newcommand{\coz}{\text{\usefont{U}{bbold}{m}{n}0}}
+\newcommand{\coo}{\text{\usefont{U}{bbold}{m}{n}1}}
 
 \endinput
