--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -4,6 +4,8 @@
 \RequirePackage[d]{esvect}
 
 % Operators
+\newcommand{\diam}{\operatorname{diam}}
+\newcommand{\dist}{\operatorname{dist}}
 \newcommand{\spn}{\operatorname{Span}}
 \newcommand{\codim}{\operatorname{codim}}
 \newcommand{\nllty}{\operatorname{nullity}}
@@ -14,7 +16,7 @@
 \newcommand{\diag}{\operatorname{diag}}
 \newcommand{\range}{\operatorname{Range}}
 \newcommand{\kernel}{\operatorname{Ker}}
-\newcommand{\id}{\operatorname{id}_n}
+\newcommand{\id}{\operatorname{id}}
 \newcommand{\adj}{\operatorname{adj}}
 \newcommand{\vecproj}{\operatorname{proj}}
 \newcommand{\vecperp}{\operatorname{perp}}
