update dependencies so individual pacakges work

--- a/preambles/boxes.sty
+++ b/preambles/boxes.sty
@@ -1,5 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{boxes}
+\RequirePackage{amsthm}
 \RequirePackage{kvoptions}
 \RequirePackage[many]{tcolorbox}
 
@@ -190,3 +191,4 @@ number within=section]{bdefi}{Definition}{
 \fi
 
 \allowdisplaybreaks
+\endinput
