--- a/preambles/linalg.sty
+++ b/preambles/linalg.sty
@@ -5,6 +5,9 @@
 \RequirePackage[d]{esvect}
 
 % Operators
+\newcommand{\cvhull}{\operatorname{cvhull}}
+\newcommand{\sgn}{\operatorname{sgn}}
+\newcommand{\slack}{\operatorname{slack}}
 \newcommand{\diam}{\operatorname{diam}}
 \newcommand{\dist}{\operatorname{dist}}
 \newcommand{\spn}{\operatorname{Span}}
@@ -19,8 +22,8 @@
 \newcommand{\kernel}{\operatorname{Ker}}
 \newcommand{\id}{\operatorname{id}}
 \newcommand{\adj}{\operatorname{adj}}
-\newcommand{\vecproj}{\operatorname{proj}}
-\newcommand{\vecperp}{\operatorname{perp}}
+\newcommand{\proj}{\operatorname{proj}}
+\newcommand{\prp}{\operatorname{perp}}
 \newcommand{\projonto}[2]{\operatorname{proj}_{\vv{#1}}(\vv{#2})}
 \newcommand{\perponto}[2]{\operatorname{perp}_{\vv{#1}}(\vv{#2})}
 
