--- a/preambles/gruvbox.sty
+++ b/preambles/gruvbox.sty
@@ -49,7 +49,7 @@
     keywordstyle=\color{lgbred},
     numberstyle=\ttfamily\bfseries\tiny\color{lgbgray},
     stringstyle=\color{lgbgreen},
-    basicstyle=\ttfamily\small\color{lgbfg},
+    basicstyle=\fontfamily{IBMPlexMono-TLF}\small\color{lgbfg},
     captionpos=b,
     numbers=left,
     numbersep=2pt,
